tests/fixtures/invalid/float_le_str.py
# Cannot compare with <= Float and Str
x: bool = 1.0 <= "hello"
